--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "jest --verbose",
+    "test": "node --test",
     "lint": "eslint --fix ."
   },
   "author": "quntao-z",
@@ -21,10 +21,6 @@
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
-    "jest": "^29.7.0",
     "nodemon": "^3.0.2"
-  },
-  "jest": {
-    "testEnvironment": "node"
   }
 }
