--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "lodash": "^4.17.21",
+    "middleware": "^1.0.0",
     "mongoose": "^8.1.0"
   },
   "devDependencies": {
